[gd_scene load_steps=7 format=3 uid="uid://sik0ew8o0dmo"]

[ext_resource type="PackedScene" uid="uid://ju6ts1galxss" path="res://scenes/Parallax.tscn" id="1_elqb8"]
[ext_resource type="Script" uid="uid://bb0y6ylp7wdjd" path="res://scripts/Main.gd" id="1_rarhs"]
[ext_resource type="Texture2D" uid="uid://gyo67ge2teea" path="res://assets/sprites/air_jump.png" id="2_0bbpv"]
[ext_resource type="FontFile" uid="uid://6bt30rwjod6r" path="res://assets/fonts/PixelOperator8.ttf" id="2_rvslj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_elqb8"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_0bbpv"]
font = ExtResource("2_rvslj")
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_rarhs")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_elqb8")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_elqb8")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PanelContainer/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(32, 48)
layout_mode = 2
texture = ExtResource("2_0bbpv")

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Infinite Runner"
label_settings = SubResource("LabelSettings_0bbpv")
horizontal_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rvslj")
theme_override_font_sizes/font_size = 8
text = "Start Game"

[node name="CenterContainer3" type="CenterContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/CenterContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rvslj")
theme_override_font_sizes/font_size = 8
text = "Exit"

[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/CenterContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/CenterContainer3/Button" to="." method="_on_button_exit"]
